# rapids-cli

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE_HEADER  MANIFEST.in  README.md  config.yml  dependencies.yaml  dependency-injection-refactoring.md  dependency-parser.py  environment.yml  mypy.ini  pyproject.toml  rapids_cli.py  requirements.txt
.github/: CODEOWNERS  ops-bot.yaml
.github/workflows/: build.yaml  pr.yaml  python-tests.yml
ci/: build_python.sh  build_wheel.sh  check_entrypoints.py  test_python.sh  test_wheel.sh  validate_wheel.sh
conda/recipes/rapids-cli/: recipe.yaml
docs/: Makefile
docs/source/: conf.py  contributing.rst  cuda_driver.rst  doctor.rst  index.rst  installation.rst  plugin_development.rst  troubleshooting.rst  user_guide.rst
docs/source/api/: checks.rst  cli.rst  debug.rst  doctor.rst
rapids_cli/: __init__.py  _compatibility.py  cli.py  config.py  config.yml  constants.py  cudf_checks.py  cuml_checks.py  default_checks.py  functions.py  hardware.py  install.py  os_checks.py  providers.py  run.py  tests.py
rapids_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rapids_cli/benchmark/: __init__.py  benchmark.py
rapids_cli/benchmark/benchmarks/: __init__.py  dataframe_operations.py
rapids_cli/cudf_checks/: __init__.py
rapids_cli/debug/: __init__.py  debug.py
rapids_cli/default_checks/: __init__.py
rapids_cli/dependency_checks/: __init__.py
rapids_cli/doctor/: __init__.py  doctor.py
rapids_cli/doctor/checks/: __init__.py  cuda_driver.py  cuda_toolkit.py  cuda_version_mismatch.py  cudf.py  cuml.py  dependencies.py  gpu.py  memory.py  nvlink.py  os.py  sdd_nvme.py
rapids_cli/info/: __init__.py
rapids_cli/tests/: conftest.py  fakes.py  test_cli.py  test_config.py  test_cuda.py  test_cuda_toolkit.py  test_cuda_version_mismatch.py  test_debug.py  test_doctor.py  test_gpu.py  test_hardware.py  test_memory.py  test_nvlink.py
tests/: test_cuda.py  test_mock.py
