[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rapids_cli"
version = "0.1"
description = "A CLI for RAPIDS"
requires-python = ">=3.10" 
dependencies = [
    "Click",
    "nvidia-ml-py3",
    "psutil",
    "rich",
    "packaging"
]

[project.scripts]
rapids = "rapids_cli:rapids"

[project.entry-points.rapids_doctor_check]
gpu_check= "rapids_cli.functions.gpu_check"
cuda_check= "rapids_cli.functions.cuda_check"
check_gpu_compute_capability = "rapids_cli.functions.check_gpu_compute_capability"
check_driver_compatibility = "rapids_cli.functions.check_driver_compatibility"
detect_os =  "rapids_cli.functions.detect_os"
check_sdd_nvme = "rapids_cli.functions.check_sdd_nvme"
check_memory_to_gpu_ratio = "rapids_cli.functions.check_memory_to_gpu_ratio"
check_nvlink_status = "rapids_cli.functions.check_nvlink_status"
check_docker = "rapids_cli.functions.check_docker"
check_conda = "rapids_cli.functions.check_conda"
check_pip = "rapids_cli.functions.check_pip"
check_glb = "rapids_cli.functions.check_glb"
compare_version = "rapids_cli.functions.compare_version"
get_cuda_version = "rapids_cli.functions.get_cuda_version"
get_driver_version = "rapids_cli.functions.get_driver_version"

